--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -9,7 +9,7 @@
                 <<"sip.{{xmpp_domain}}">>,<<"siprelay.{{xmpp_domain}}">>,<<"vgoods.{{xmpp_domain}}">>,
                 <<"achievement.{{xmpp_domain}}">>,<<"sms-route-selector.{{xmpp_domain}}">>,
                 <<"sipoutctr.{{xmpp_domain}}">>,<<"sipoute.{{xmpp_domain}}">>,<<"sipine.{{xmpp_domain}}">>,
-                <<"pushservice.{{xmpp_domain}}">>, <<"{{xmpp_domain}}">>]}
+                <<"pushservice.{{xmpp_domain}}">>, <<"energyservice.{{xmpp_domain}}">>, <<"{{xmpp_domain}}">>]}
     ]},
 
     {lager, [
