--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -4,13 +4,7 @@
         {domain, "{{xmpp_domain}}" },
         {server, "{{xmpp_server_host}}" },
         {password, "{{xmpp_server_pass}}" },
-        {services, [<<"pushservice.{{xmpp_domain}}">>, <<"userservice.{{xmpp_domain}}">>,
-                <<"energy.{{xmpp_domain}}">>,<<"sms.{{xmpp_domain}}">>,<<"relay.{{xmpp_domain}}">>,
-                <<"sip.{{xmpp_domain}}">>,<<"siprelay.{{xmpp_domain}}">>,<<"vgoods.{{xmpp_domain}}">>,
-                <<"achievement.{{xmpp_domain}}">>,<<"sms-route-selector.{{xmpp_domain}}">>,
-                <<"sipoutctr.{{xmpp_domain}}">>,<<"sipoute.{{xmpp_domain}}">>,<<"sipine.{{xmpp_domain}}">>,
-                <<"pushservice.{{xmpp_domain}}">>, <<"energyservice.{{xmpp_domain}}">>,
-                <<"offlineservice.{{xmpp_domain}}">>, <<"{{xmpp_domain}}">>]}
+        {services, [<<"component.{{xmpp_domain}}">>]}
     ]},
 
     {lager, [
