Rename bot for ebot :)

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 
 {deps, [
     {exmpp, ".*", {git, "git://github.com/Zert/exmpp.git", "rebar"}},
-    {lager, ".*", {git, "git://github.com/basho/lager.git", "2.0.0rc1"}},
+    {lager, ".*", {git, "git://github.com/basho/lager.git", "2.0.0"}},
     {uuid, ".*", {git, "git://github.com/avtobiff/erlang-uuid.git", "v0.3.3"}},
     {syslog, ".*", {git, "git://github.com/nivertech/erlang-syslog", "ori_070812"}}
 ]}.
