--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -1,5 +1,5 @@
 [
-    {bot, [
+    {ebot, [
         {user, "{{xmpp_user}}" },
         {domain, "{{xmpp_domain}}" },
         {server, "{{xmpp_server_host}}" },
@@ -9,10 +9,9 @@
 
     {lager, [
         {handlers, [
-            {lager_file_backend, [
-                {"{{platform_log_dir}}/error.log", error, 10485760, "$D0", 5},
-                {"{{platform_log_dir}}/info.log", info, 10485760, "$D0", 5}
-            ]}
+            {lager_console_backend, info},
+            {lager_file_backend, [{file, "{{platform_log_dir}}/error.log"}, {level, error}]},
+            {lager_file_backend, [{file, "{{platform_log_dir}}/info.log"}, {level, info}]}
         ]},
         {crash_log, "{{platform_log_dir}}/crash.log"},
         {crash_log_msg_size, 65536},
