--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -2,7 +2,7 @@
     {lib_dirs, ["../deps", "../apps"]},
     {erts, [{mod_cond, derived}, {app_file, strip}]},
     {app_file, strip},
-    {rel, "bot", git, [
+    {rel, "ebot", git, [
         kernel,
         stdlib,
         sasl,
@@ -11,13 +11,13 @@
         lager,
         syslog,
         uuid,
-        bot
+        ebot
     ]},
     {rel, "start_clean", "", [
         kernel,
         stdlib
     ]},
-    {boot_rel, "bot"},
+    {boot_rel, "ebot"},
     {profile, embedded},
     {incl_cond, derived},
     {mod_cond, derived},
@@ -25,17 +25,17 @@
     {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                         "^erts.*/(doc|info|include|lib|man|src)"]},
     {excl_app_filters, ["\.gitignore"]},
-    {app, bot, [{mod_cond, app}, {incl_cond, include}]}
+    {app, ebot, [{mod_cond, app}, {incl_cond, include}]}
 ]}.
 
-{target_dir, "bot"}.
+{target_dir, "ebot"}.
 {overlay_vars, "vars.config"}.
 
 {overlay, [
     {mkdir, "log/sasl"},
     {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
     {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-    {copy, "files/bot", "bin/bot"},
+    {copy, "files/ebot", "bin/ebot"},
     {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
     {template, "files/app.config", "etc/app.config"},
     {copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
