--- a/rel/vars.config
+++ b/rel/vars.config
@@ -10,7 +10,7 @@
 %% etc/app.config
 %%
 
-%% bot
+%% ebot
 {xmpp_user,         "pepito"}.
 {xmpp_domain,       "localhost"}.
 {xmpp_server_host,  "localhost"}.
