Start development for manage echo calls

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -4,14 +4,16 @@
         {domain, "{{xmpp_domain}}" },
         {server, "{{xmpp_server_host}}" },
         {password, "{{xmpp_server_pass}}" },
-        {services, [<<"component.{{xmpp_domain}}">>]}
+        {request_ping, false},
+        {services, []}
     ]},
 
     {lager, [
         {handlers, [
             {lager_console_backend, info},
             {lager_file_backend, [{file, "{{platform_log_dir}}/error.log"}, {level, error}]},
-            {lager_file_backend, [{file, "{{platform_log_dir}}/info.log"}, {level, info}]}
+            {lager_file_backend, [{file, "{{platform_log_dir}}/info.log"}, {level, info}]} ,
+            {lager_file_backend, [{file, "{{platform_log_dir}}/debug.log"}, {level, debug}]}
         ]},
         {crash_log, "{{platform_log_dir}}/crash.log"},
         {crash_log_msg_size, 65536},
