--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
     {exmpp, ".*", {git, "git://github.com/Zert/exmpp.git", "rebar"}},
     {lager, ".*", {git, "git://github.com/basho/lager.git", "2.0.0"}},
     {uuid, ".*", {git, "git://github.com/avtobiff/erlang-uuid.git", "v0.3.3"}},
+    {forseti, ".*", {git, "git://github.com/altenwald/forseti", "dc10a32dd"}},
     {syslog, ".*", {git, "git://github.com/nivertech/erlang-syslog", "ori_070812"}}
 ]}.
 {cover_enabled, true}.
