Echo call working and lost packets statictis for call

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -1,9 +1,9 @@
 [
     {ebot, [
-        {user, "{{xmpp_user}}" },
-        {domain, "{{xmpp_domain}}" },
-        {server, "{{xmpp_server_host}}" },
-        {password, "{{xmpp_server_pass}}" },
+        {user, "pepe" },
+        {domain, "ym.ms" },
+        {server, "xmpp.ym.ms" },
+        {password, "ohr9phahX7cieYeiva2l" },
         {request_ping, false},
         {services, []}
     ]},
