Responds to GC(alpha)

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -25,6 +25,7 @@
     {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                         "^erts.*/(doc|info|include|lib|man|src)"]},
     {excl_app_filters, ["\.gitignore"]},
+    {app, exmpp, [{incl_cond, derived}, {mod, tls, [{incl_cond, exclude}]}]},
     {app, ebot, [{mod_cond, app}, {incl_cond, include}]}
 ]}.
 
